Changed markup to show first slide

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </ul>
         </nav>
         <section id="slider-section">
-            <!-- <div class="arrow previous"></div>
-            <h1>The coffee masters</h1>
+            <div class="arrow previous"></div>
+            <h1>Welcome to Savannah Coffee</h1>
             <img src="images/slider-separator-img.png" alt="slider-separator">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corrupti ut facere aperiam distinctio similique quisquam ad</p>
             <button>Make a reservation</button>
-            <div class="arrow next"></div> -->
+            <div class="arrow next"></div>
         </section>
     </header>
 
