--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/normalize.css">
+    <link
+    rel="stylesheet"
+  />
     <link rel="stylesheet" href="dist/main.css">
     <title>Savannah Coffee Shop</title>
 </head>
 <body>
-    <header id="main-header">
+    <header class="main-header">
         <nav id="main-nav">
             <div class="icon">Savannah Coffee Shop</div>
             <ul>
@@ -20,7 +23,7 @@
                 <li>Events</li>
             </ul>
         </nav>
-        <section id="slider-section">
+        <section class="slider-section">
             <div class="arrow previous"></div>
             <h1>Welcome to Savannah Coffee</h1>
             <img src="images/slider-separator-img.png" alt="slider-separator">
