--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav id="main-nav">
             <div class="icon">Savannah Coffee Shop</div>
             <ul>
-                <li>Home</li>
-                <li>Company</li>
-                <li>Menu</li>
-                <li>Gallery</li>
-                <li>Events</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Company</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Events</a></li>
             </ul>
         </nav>
         <section class="slider-section">
@@ -33,6 +33,7 @@
         </section>
     </header>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
