Add coffee description section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,62 @@
             <div class="arrow next"></div>
         </section>
     </header>
+    
+    <section id="coffee-build">
+        <h3 class="title">Coffe build your base</h3>
+        <div class="grid">
+            <div class="grid-left">
+                <div class="grid-item">
+                    <div>
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                    </div>
+                    <img src="images/croissant.png" alt="croissant">
+                </div>
+                <div class="grid-item">
+                    <div>
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                    </div>
+                    <img src="images/bread.png" alt="bread-slice">
+                </div>
+                <div class="grid-item">
+                    <div>
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                    </div>
+                    <img src="images/pancake.png" alt="pancake">
+                </div>
+            </div>
+            <div class="grid-center">
+                <img src="images/coffee-cup.jpg" alt="coffee-cup">
+            </div>
+            <div class="grid-right">
+                <div class="grid-item">
+                    <div>
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                    </div>
+                    <img src="images/brewer.png" alt="brewer">
+                </div>
+                <div class="grid-item">
+                    <div>
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                    </div>
+                    <img src="images/coffee-cup.png" alt="coffee-cup">
+                </div>
+                <div class="grid-item">
+                    <div>
+                        <h3>Title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                    </div>
+                    <img src="images/handle-coffee-cup.png" alt="handle-coffee-cup">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
     <script src="main.js"></script>
