--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <div class="grid-left">
                 <div class="grid-item">
                     <div>
-                        <h3>Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                        <h3>Croissant</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
                     </div>
                     <img src="images/croissant.png" alt="croissant">
                 </div>
                 <div class="grid-item">
                     <div>
-                        <h3>Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                        <h3>French toast</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
                     </div>
                     <img src="images/bread.png" alt="bread-slice">
                 </div>
                 <div class="grid-item">
                     <div>
-                        <h3>Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
+                        <h3>Pancakes</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
                     </div>
                     <img src="images/pancake.png" alt="pancake">
                 </div>
@@ -64,32 +64,98 @@
             </div>
             <div class="grid-right">
                 <div class="grid-item">
-                    <div>
-                        <h3>Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
-                    </div>
                     <img src="images/brewer.png" alt="brewer">
+                    <div>
+                        <h3>Colombian Coffee</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
+                    </div>
                 </div>
                 <div class="grid-item">
-                    <div>
-                        <h3>Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
-                    </div>
                     <img src="images/coffee-cup.png" alt="coffee-cup">
+                    <div>
+                        <h3>Ready to go</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
+                    </div>
                 </div>
                 <div class="grid-item">
-                    <div>
-                        <h3>Title</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit nostrum tempore asperiores voluptatibus consequatur molestias.</p>
-                    </div>
                     <img src="images/handle-coffee-cup.png" alt="handle-coffee-cup">
+                    <div>
+                        <h3>Morning Coffee</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
+                    </div>  
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="about-section">
+        <div>
+            <h3>About us</h3>
+            <p>SAVANNA is a new local coffee house that roasts it’s own coffee from the best coffee sources around the world. They also offer a range of sandwiches, salads and homemade soups; along with a wide variety of cakes, pastries and desserts. Local entertainment such as acoustic music will be provided on weekend evenings. The atmosphere is urban funk and located in the college-town center.</p>
+        </div>
+        <img src="images/coffee-beans.png" alt="coffee beans">
+    </section>
+
+    <section class="gallery">
+        <figure class="grid-item one">
+            <img src="images/1.jpg" alt="" class="image-gallery">
+        </figure>
+        <figure class="grid-item two">
+            <img src="images/2.jpg" alt="" class="image-gallery">
+        </figure>
+        <figure class="grid-item three">
+            <img src="images/3.jpg" alt="" class="image-gallery">
+        </figure>
+        <figure class="grid-item four">
+            <img src="images/4.jpg" alt="" class="image-gallery">
+        </figure>
+    </section>
+
+    <section id="menu">
+        <h3>Explore our menu</h3>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
+
+<!-- <div class="opening-hours">
+    <table>
+        <thead>
+            <tr>
+                <th>Opening hours</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Monday</td>
+                <td>6:00am - 10:00pm</td>
+            </tr>
+            <tr>
+                <td>Tuesday</td>
+                <td>6:00am - 10:00pm</td>
+            </tr>
+            <tr>
+                <td>Wednesday</td>
+                <td>6:00am - 10:00pm</td>
+            </tr>
+            <tr>
+                <td>Thursday</td>
+                <td>6:00am - 10:00pm</td>
+            </tr>
+            <tr>
+                <td>Friday</td>
+                <td>6:00am - 10:00pm</td>
+            </tr>
+            <tr>
+                <td>Saturday</td>
+                <td>7:00am - 5:00pm</td>
+            </tr>
+            <tr>
+                <td>Sunday</td>
+                <td>Closed</td>
+            </tr>
+        </tbody>
+    </table>
+</div> -->
