--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 <body>
     <header class="main-header">
         <nav id="main-nav">
+            <div class="toggle-bar">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <div class="icon">Savannah Coffee Shop</div>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -254,23 +259,25 @@
     </section>
 
     <footer>
-        <div class="footer-item one">
-            <h3>Savannah Coffee Shop</h3>
-            <p>Savanna’s is a new local coffee house that roasts it’s own coffee from the best coffee sources around the world.</p>
-        </div>
-        <div class="footer-item two">
-            <h3>Get our latest news and tips</h3>
-            <form>
-                <input type="email" name="email">
-                <button>Submit</button>
-            </form>
-        </div>
-        <div class="footer-item three">
-            <h3>Follow us</h3>
-            <div class="social-icons">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-instagram"></i>
+        <div class="footer-items">
+            <div class="footer-item one">
+                <h3>Savannah Coffee Shop</h3>
+                <p>Savanna’s is a new local coffee house that roasts it’s own coffee from the best coffee sources around the world.</p>
+            </div>
+            <div class="footer-item two">
+                <h3>Get our latest news and tips</h3>
+                <form>
+                    <input type="email" name="email">
+                    <button>Submit</button>
+                </form>
+            </div>
+            <div class="footer-item three">
+                <h3>Follow us</h3>
+                <div class="social-icons">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-instagram"></i>
+                </div>
             </div>
         </div>
     </footer>
