Added alt tags to all images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Savannah Coffee Shop landing page. Front-end project for portfolio.">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&family=Raleway:ital,wght@0,400;0,500;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/normalize.css">
@@ -55,7 +56,7 @@
                         <h3>French toast</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
                     </div>
-                    <img src="images/bread.png" alt="bread-slice">
+                    <img src="images/bread.png" alt="bread slice">
                 </div>
                 <div class="grid-item">
                     <div>
@@ -66,7 +67,7 @@
                 </div>
             </div>
             <div class="grid-center">
-                <img src="images/coffee-cup.jpg" alt="coffee-cup">
+                <img src="images/coffee-cup.jpg" alt="coffee cup">
             </div>
             <div class="grid-right">
                 <div class="grid-item">
@@ -77,14 +78,14 @@
                     </div>
                 </div>
                 <div class="grid-item">
-                    <img src="images/coffee-cup.png" alt="coffee-cup">
+                    <img src="images/coffee-cup.png" alt="hot coffee-cup">
                     <div>
                         <h3>Ready to go</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
                     </div>
                 </div>
                 <div class="grid-item">
-                    <img src="images/handle-coffee-cup.png" alt="handle-coffee-cup">
+                    <img src="images/handle-coffee-cup.png" alt="handle coffee cup">
                     <div>
                         <h3>Morning Coffee</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas itaque illum praesentium velit</p>
@@ -104,16 +105,16 @@
 
     <section class="gallery">
         <figure class="grid-item one">
-            <img src="images/1.jpg" alt="" class="image-gallery">
+            <img src="images/galllery-one.jpg" alt="" class="coffee breakfast close to window">
         </figure>
         <figure class="grid-item two">
-            <img src="images/2.jpg" alt="" class="image-gallery">
+            <img src="images/gallery-two.jpg" alt="" class="coffee expresso machine">
         </figure>
         <figure class="grid-item three">
-            <img src="images/3.jpg" alt="" class="image-gallery">
+            <img src="images/gallery-three.jpg" alt="" class="friends in coffee shop">
         </figure>
         <figure class="grid-item four">
-            <img src="images/4.jpg" alt="" class="image-gallery">
+            <img src="images/gallery-four.jpg" alt="" class="coffee shop customer service">
         </figure>
     </section>
 
