Added responsive navbar

--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
 
     <section class="gallery">
         <figure class="grid-item one">
-            <img src="images/galllery-one.jpg" alt="" class="coffee breakfast close to window">
+            <img src="images/galllery-one.jpg" class="image-gallery" alt="coffee breakfast close to window">
         </figure>
         <figure class="grid-item two">
-            <img src="images/gallery-two.jpg" alt="" class="coffee expresso machine">
+            <img src="images/gallery-two.jpg" class="image-gallery" alt="coffee expresso machine">
         </figure>
         <figure class="grid-item three">
-            <img src="images/gallery-three.jpg" alt="" class="friends in coffee shop">
+            <img src="images/gallery-three.jpg" class="image-gallery" alt="friends in coffee shop">
         </figure>
         <figure class="grid-item four">
-            <img src="images/gallery-four.jpg" alt="" class="coffee shop customer service">
+            <img src="images/gallery-four.jpg" class="image-gallery" alt="coffee shop customer service">
         </figure>
     </section>
 
@@ -284,6 +284,7 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.0/gsap.min.js"></script>
+    <script src="sliderData.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
