--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="main-header">
-        <nav id="main-nav">
+        <nav class="main-nav">
             <div class="toggle-bar">
                 <div></div>
                 <div></div>
@@ -23,11 +23,11 @@
             </div>
             <div class="icon">Savannah Coffee Shop</div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#" class="menu-active">Home</a></li>
+                <li><a href="#" data-target="about-section">Company</a></li>
+                <li><a href="#" data-target="menu">Menu</a></li>
+                <li><a href="#" data-target="gallery">Gallery</a></li>
+                <li><a href="#" data-target="contact-us">Contact Us</a></li>
             </ul>
         </nav>
         <section class="slider-section">
@@ -35,11 +35,11 @@
             <h1>Welcome to Savannah Coffee</h1>
             <img src="images/slider-separator-img.png" alt="slider-separator">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corrupti ut facere aperiam distinctio similique quisquam ad</p>
-            <button>Make a reservation</button>
+            <button data-target="reservation-info">Make a reservation</button>
             <div class="arrow next"></div>
         </section>
     </header>
-    
+
     <section id="coffee-build">
         <h3 class="title">Coffe build your base</h3>
         <div class="grid">
@@ -103,7 +103,7 @@
         <img src="images/coffee-beans.png" alt="coffee beans">
     </section>
 
-    <section class="gallery">
+    <section id="gallery">
         <figure class="grid-item one">
             <img src="images/galllery-one.jpg" class="image-gallery" alt="coffee breakfast close to window">
         </figure>
@@ -220,7 +220,7 @@
 
     <section id="opening-hours-reservation">
         <img src="images/opening.jpg" alt="coffe shop local">
-        <div class="reservation-hours">
+        <div class="reservation-hours" id="reservation-info">
             <img src="images/reservation.jpg" alt="brewing coffee">
             <div class="content">
                 <h1>Opening Hours and Reservations</h1>
